--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name="com.codepath.flixster.ui.movielistscreen.MovieListActivity">
+        <activity android:name=".ui.moviedetails.MovieDetailsActivity"></activity>
+        <activity android:name=".ui.movielistscreen.MovieListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
