Implement YouTubePlayerView in movie details

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'org.parceler:parceler-api:1.1.12'
+    implementation files('lib/YouTubeAndroidPlayerApi.jar')
     annotationProcessor 'org.parceler:parceler:1.1.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     testImplementation 'junit:junit:4.12'
